# video-game-sales-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: .~lock.Video_Games_Sales_as_at_22_Dec_2016.csv#  README.md  video_games_sales.parquet
notebooks/: Video_Game_Sales_EDA.ipynb
scripts/: download_data.py
