[project]
name = "video-game-sales-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
]
